src/test/ui/did_you_mean/issue-31424.stderr
error[E0596]: cannot borrow immutable argument `self` as mutable
  --> $DIR/issue-31424.rs:17:15
   |
17 |         (&mut self).bar(); //~ ERROR cannot borrow
   |               ^^^^
   |               |
   |               cannot reborrow mutably
   |               try removing `&mut` here

error[E0596]: cannot borrow immutable argument `self` as mutable
  --> $DIR/issue-31424.rs:23:15
   |
22 |     fn bar(self: &mut Self) {
   |            --------------- consider changing this to `mut self: &mut Self`
23 |         (&mut self).bar(); //~ ERROR cannot borrow
   |               ^^^^ cannot borrow mutably

error: aborting due to 2 previous errors

